== 0.3.1 (2019-10-05)

 * Correctly publish

== 0.3.0 (2019-10-05) ''yanked''

 * Basic support for HTTP/2

== 0.2.0 (2018-02-18

 * Improved tests